improve - games lists on server